# gs_stereo_camera

./: README.md  README.txt  package.xml  setup.cfg  setup.py
config/: left.yaml  right.yaml
config/calibrationdata/: ost.txt
gs_stereo_camera/: camera_node.py  stereo_camera.py
launch/: camera_node.launch.py  camera_v4l2_node.launch.py
