<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gs_stereo_camera</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="nontanan@gensurv.com">nontanan</maintainer>
  <license>Apache License 2.0</license>  <!-- Update the license as needed -->

  <!-- Dependencies -->
  <depend>rclpy</depend>
  
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>opencv-python</exec_depend>  <!-- This is for OpenCV in Python -->
  <exec_depend>pyrealsense2</exec_depend>   <!-- RealSense SDK for Python -->

  <!-- Testing Dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- Export the build type -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
